# Skill-RM-Original-Rebuttal

./: .env.example  .gitattributes  .gitignore  LICENSE  ORIGINAL_V6_SHA256SUMS  README.md  pyproject.toml
configs/judgebench/: baseline.yaml  skill_fair.yaml  skill_operational.yaml
configs/rewardbench2/: baseline.yaml  skill_fair.yaml  skill_operational.yaml
configs/rmbench/: baseline.yaml  skill_fair.yaml  skill_operational.yaml
docs/: coauthor_compute_prompt.md  codex_compute_followup_plan.md  codex_rebuttal_experiment_plan.md  rebuttal_context.md
scripts/: analyze_compute_traces.py  analyze_historical_joint_traces.py  check_endpoints.py  normalize_vllm_urls.py  package_compute_comparison.py  package_original_v6_rebuttal.py  prepare_human_trace_audit.py  prepare_original_v6_resource_subsets.py  prepare_rebuttal_data.py  prepare_trace_audit.py  rebuttal_common.py  record_run_attempt.py  redact_stream.py  run_compute_comparison.sh  run_original_v6_rebuttal.sh  sanitize_run_artifacts.py  summarize_compute_comparison.py  summarize_human_trace_audit.py  summarize_original_v6_rebuttal.py  summarize_trace_audit.py  verify_compute_delivery.py  verify_delivery.py  verify_original_sources.py
skillrm/: __init__.py  ablation_benchmark.py  agent.py  closed_chat_client.py  closed_judgebench.py  evaluator.py  llm.py  openrs_benchmark.py  qwen_baseline.py  rb2.py  resources.py  route_policy.py  run_benchmark.py  types.py  wiki_search.py
tests/: conftest.py  test_compute_followup.py  test_packaging.py  test_summary_and_audit.py  test_workflow_basics.py
(+26 files in other folders)
